Eliminacion de clase gameTable y ajuste a manejo de turnos