@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Represent the players of the game, using threads.
+ * Class to represent the players of the game
  * @author Olman Alexander Silva 2343025-2724
  * @version 1.0
  */
@@ -12,48 +12,60 @@ import java.util.List;
 public class Player {
     private final String name;
     private final List<Cards> hand;
-    private int score;
     private boolean canPlay;
+    private final boolean isUser;
 
+    /**
+     * constructor de la clase
+     * @param name representa el nombre del jugador
+     */
     public Player(String name) {
         this.name = name;
         this.hand = new ArrayList<>();
-        this.score = 0;
         this.canPlay = true;
+        this.isUser = name.equals("User");
     }
 
+    /**
+     * metodo para adherir cartas
+     * @param card representa la carta adherida
+     */
     public void addCard(Cards card) {
         hand.add(card);
     }
 
+    /**
+     * Metodo para jugar una carta
+     * @return representa el primer movimiento
+     */
     public Cards playCard() {
         if (!hand.isEmpty() && canPlay) {
-            return hand.remove(0); // Simula jugar la primera carta de la mano
+            return hand.removeFirst(); // Simula jugar la primera carta de la mano
         }
         return null;
     }
 
-    public boolean canContinue() {
-        return canPlay;
-    }
-
-    public void updateScore(int cardValue) {
-        score += cardValue;
-        if (score > 50) {
-            canPlay = false;
-        }
-    }
-
+    /**
+     * Metodo que retorna el nombre del jugador
+     * @return representa el nombre del jugador
+     */
     public String getName() {
         return name;
     }
 
+    /**
+     * Metodo que retorna la mano del jugador
+     * @return representa la mano del jugador
+     */
     public List<Cards> getHand() {
         return hand;
     }
 
-    public int getScore() {
-        return score;
+    /**
+     * Metodo para verificar si es el jugador usuario
+     */
+    public boolean isUser() {
+        return isUser;
     }
 }
 
